Update algorithmic trading system.ipynb

--- a/algorithmic trading system.ipynb
+++ b/algorithmic trading system.ipynb
@@ -989,8 +989,21 @@
     "                \n",
     "                WCoeff = WCoeff * (1-df.loc[i, ticker + ' weight']/100)\n",
     "        \n",
+    "        #Add final WCoeff\n",
+    "        df.loc[i,'W_COEFF'] = WCoeff\n",
+    "        #Get Index Quantity on a Exdiv day\n",
+    "        try: ex_ind_qtty = df.loc[df[df['Date'] == df.loc[i,index + '_EXDATE']].index[0],index + '_QTY']\n",
+    "        except: ex_ind_qtty = 0 \n",
+    "        \n",
+    "        mgmtfeeIndqty = df.loc[i,'Mgmt Fee'] * int(df.loc[i-1, 'Holdings'] * mgmtfee / df.loc[i,index])\n",
+    "                    \n",
+    "        df.loc[i, index + '_QTY'] = df.loc[i-1, index + '_QTY'] - IndQtyChanges - mgmtfeeIndqty #index Qtty\n",
+    "        df.loc[i, 'Cash'] = Cash + (ex_ind_qtty  * df.loc[i, index + '_DIV']) #() is index divs\n",
+    "        \n",
+    "        for ticker in tickers:  # holdings\n",
+    "            stock_holdings = stock_holdings + df.loc[i, ticker + '_QTY'] * df.loc[i, ticker]  #holdings \n",
+    "        df.loc[i, 'Holdings'] = stock_holdings + df.loc[i,index+'_QTY'] * df.loc[i,index] + df.loc[i,'Cash']\n",
     "\n",
-    "        # Part of the code was skipped #\n",
     "\n",
     "df.set_index('Date', inplace=True)\n",
     "df.to_excel('Portfolio.xlsx')\n",
@@ -7084,7 +7097,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7157,9 +7169,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py373",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py373"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -7171,7 +7183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
