Update algorithmic trading system.ipynb

--- a/algorithmic trading system.ipynb
+++ b/algorithmic trading system.ipynb
@@ -22,9 +22,9 @@
     "\n",
     "\n",
     "#### Assumptions ####\n",
-    "1. Initial capital – $1,000,000\n",
-    "2. Transaction fee – $0.01\n",
-    "3. RSI parameters\n",
+    "1. Initial capital $1,000,000\n",
+    "2. Transaction fee $0.01\n",
+    "3. RSI parameters:\n",
     "    * RSI period – 14 days\n",
     "    * Sell signal – RSI 70\n",
     "    * Buy signal – RSI 30\n",
